fixed routes with new builder tool, did some bug squashing

--- a/public/builder.css
+++ b/public/builder.css
@@ -1,10 +1,10 @@
-label[for="name"]{
+/* label[for="name"]{
     display:none;
 }
 
 input[name="name"]{
     display: none;
-}
+} */
 
 form{
     display: flex;
